maybe the last dance

--- a/Student/contect.html
+++ b/Student/contect.html
@@ -127,14 +127,14 @@
       </aside>
 
     <div class="contact-section">
-      <h2>📞 Get in Touch</h2>
+      <h2> Get in Touch</h2>
       <div class="contact-cards">
         <div class="card teacher">
           <img src="https://img.icons8.com/ios/50/teacher.png" alt="Teacher Icon">
           <h3> Teacher</h3>
           <table>
-            <tr><td><strong>Phone:</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
-            <tr><td><strong>Email:</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
+            <tr><td><strong>📞</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
+            <tr><td><strong>📧</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
           </table>
         </div>
 
@@ -142,10 +142,10 @@
           <img src="https://img.icons8.com/ios/50/school.png" alt="School Icon">
           <h3>School</h3>
           <table>
-            <tr><td><strong>Phone:</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
-            <tr><td><strong>Email:</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
-            <tr><td><strong>URL:</strong></td><td><a href="https://www.madrasati.com">www.madrasati.com</a></td></tr>
-            <tr><td><strong>Location:</strong></td><td><a href="#">School Location 📍</a></td></tr>
+            <tr><td><strong>📞</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
+            <tr><td><strong>📧</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
+            <tr><td><strong>🌐</strong></td><td><a href="https://www.madrasati.com">www.madrasati.com</a></td></tr>
+            <tr><td><strong>📍</strong></td><td><a href="#">School Location </a></td></tr>
           </table>
         </div>
 
@@ -153,8 +153,8 @@
           <img src="https://img.icons8.com/ios/50/administrator-male.png" alt="Admin Icon">
           <h3>Admin</h3>
           <table>
-            <tr><td><strong>Phone:</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
-            <tr><td><strong>Email:</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
+            <tr><td><strong>📞</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
+            <tr><td><strong>📧</strong></td><td><a href="mailto:Email@domain.com">Email@domain.com</a></td></tr>
           </table>
         </div>
       </div>
