--- a/Student/contect.html
+++ b/Student/contect.html
@@ -69,7 +69,7 @@
 
       <!-- Main Sidebar Container -->
       <aside class="main-sidebar sidebar-dark-primary elevation-4">
-        <a href="dashboard.html" class="brand-link">
+        <a href="dashboard_page.html" class="brand-link">
           <img
             src="../styles/logo2.png"
             alt="Logo"
@@ -130,7 +130,7 @@
       <h2> Get in Touch</h2>
       <div class="contact-cards">
         <div class="card teacher">
-          <img src="https://img.icons8.com/ios/50/teacher.png" alt="Teacher Icon">
+          <img src="https://img.icons8.com/ios/50/teacher.png" alt="Teacher Icon" class="ss">
           <h3> Teacher</h3>
           <table>
             <tr><td><strong>📞</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
@@ -139,7 +139,7 @@
         </div>
 
         <div class="card school">
-          <img src="https://img.icons8.com/ios/50/school.png" alt="School Icon">
+          <img src="https://img.icons8.com/ios/50/school.png" alt="School Icon" class="ss">
           <h3>School</h3>
           <table>
             <tr><td><strong>📞</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
@@ -150,7 +150,7 @@
         </div>
 
         <div class="card admin">
-          <img src="https://img.icons8.com/ios/50/administrator-male.png" alt="Admin Icon">
+          <img src="https://img.icons8.com/ios/50/administrator-male.png" alt="Admin Icon" class="ss">
           <h3>Admin</h3>
           <table>
             <tr><td><strong>📞</strong></td><td><a href="tel:0799999999">0799999999</a></td></tr>
